// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runClientPrintConfig > --json output for claude/http parses cleanly and matches snapshot 1`] = `
"{
  "mcpServers": {
    "toolbox": {
      "url": "http://127.0.0.1:7331/mcp"
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for claude/stdio parses cleanly and matches snapshot 1`] = `
"{
  "mcpServers": {
    "toolbox": {
      "command": "npx",
      "args": [
        "-y",
        "tlbx",
        "serve",
        "--stdio"
      ]
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for codex/http parses cleanly and matches snapshot 1`] = `
"{
  "mcpServers": {
    "toolbox": {
      "url": "http://127.0.0.1:7331/mcp"
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for codex/stdio parses cleanly and matches snapshot 1`] = `
"{
  "mcpServers": {
    "toolbox": {
      "command": "npx",
      "args": [
        "-y",
        "tlbx",
        "serve",
        "--stdio"
      ]
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for generic/http parses cleanly and matches snapshot 1`] = `
"{
  "mcpServers": {
    "toolbox": {
      "url": "http://127.0.0.1:7331/mcp"
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for generic/stdio parses cleanly and matches snapshot 1`] = `
"{
  "mcpServers": {
    "toolbox": {
      "command": "npx",
      "args": [
        "-y",
        "tlbx",
        "serve",
        "--stdio"
      ]
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for opencode/http parses cleanly and matches snapshot 1`] = `
"{
  "mcp": {
    "toolbox": {
      "type": "remote",
      "url": "http://127.0.0.1:7331/mcp",
      "enabled": true
    }
  }
}
"
`;

exports[`runClientPrintConfig > --json output for opencode/stdio parses cleanly and matches snapshot 1`] = `
"{
  "mcp": {
    "toolbox": {
      "type": "local",
      "command": [
        "npx",
        "-y",
        "tlbx",
        "serve",
        "--stdio"
      ],
      "enabled": true
    }
  }
}
"
`;

exports[`runClientPrintConfig > default friendly output for claude/http contains an explanation and a fenced JSON block 1`] = `
"Add this to your Claude Desktop MCP config (claude_desktop_config.json) after starting \`tlbx serve --http\`, then restart Claude Desktop:

\`\`\`json
{
  "mcpServers": {
    "toolbox": {
      "url": "http://127.0.0.1:7331/mcp"
    }
  }
}
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for claude/stdio contains an explanation and a fenced JSON block 1`] = `
"Add this to your Claude Desktop MCP config (claude_desktop_config.json), then restart Claude Desktop:

\`\`\`json
{
  "mcpServers": {
    "toolbox": {
      "command": "npx",
      "args": [
        "-y",
        "tlbx",
        "serve",
        "--stdio"
      ]
    }
  }
}
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for codex/http contains an explanation and a fenced JSON block 1`] = `
"Run \`tlbx serve --http\` first, then add this to your Codex CLI MCP config to point it at the running ToolBox:

\`\`\`json
{
  "mcpServers": {
    "toolbox": {
      "url": "http://127.0.0.1:7331/mcp"
    }
  }
}
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for codex/stdio contains an explanation and a fenced JSON block 1`] = `
"Add this to your Codex CLI MCP config so Codex launches ToolBox over stdio on demand:

\`\`\`json
{
  "mcpServers": {
    "toolbox": {
      "command": "npx",
      "args": [
        "-y",
        "tlbx",
        "serve",
        "--stdio"
      ]
    }
  }
}
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for generic/http contains an explanation and a fenced JSON block 1`] = `
"Generic MCP client (Streamable HTTP). Run \`tlbx serve --http\` first, then point your client at this URL:

\`\`\`json
{
  "mcpServers": {
    "toolbox": {
      "url": "http://127.0.0.1:7331/mcp"
    }
  }
}
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for generic/stdio contains an explanation and a fenced JSON block 1`] = `
"Generic MCP client (stdio). Most clients accept this shape; consult your client docs for the exact config key:

\`\`\`json
{
  "mcpServers": {
    "toolbox": {
      "command": "npx",
      "args": [
        "-y",
        "tlbx",
        "serve",
        "--stdio"
      ]
    }
  }
}
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for opencode/http contains an explanation and a fenced JSON block 1`] = `
"Run \`tlbx serve --http\` first, then add this to your OpenCode MCP config to point it at the running ToolBox:

\`\`\`json
{
  "mcp": {
    "toolbox": {
      "type": "remote",
      "url": "http://127.0.0.1:7331/mcp",
      "enabled": true
    }
  }
}
\`\`\`
"
`;

exports[`runClientPrintConfig > default friendly output for opencode/stdio contains an explanation and a fenced JSON block 1`] = `
"Add this to your OpenCode MCP config so OpenCode launches ToolBox over stdio:

\`\`\`json
{
  "mcp": {
    "toolbox": {
      "type": "local",
      "command": [
        "npx",
        "-y",
        "tlbx",
        "serve",
        "--stdio"
      ],
      "enabled": true
    }
  }
}
\`\`\`
"
`;
